change project name to foobar

--- a/server/database/pg_hba.conf
+++ b/server/database/pg_hba.conf
@@ -59,10 +59,10 @@
 # or via the -i or -h command line switches.
 #
 
-host fixjam fixjam 10.0.0.0/8 md5
-host fixjam fixjam 192.168.58.1/24 md5
-local fixjam fixjam md5
-local test_fixjam fixjam md5
+host foobar foobar 10.0.0.0/8 md5
+host foobar foobar 192.168.58.1/24 md5
+local foobar foobar md5
+local test_foobar foobar md5
 
 # DO NOT DISABLE!
 # If you change this first entry you will need to make sure that the
