--- a/server/postfix_preseed.cfg
+++ b/server/postfix_preseed.cfg
@@ -9,7 +9,7 @@ postfix postfix/mailname    string  seddit.com
 postfix postfix/tlsmgr_upgrade_warning  boolean 
 postfix postfix/recipient_delim string  +
 postfix postfix/main_mailer_type    select  Internet Site
-postfix postfix/destinations    string  fixjam.com, ubuntu, localhost.localdomain, localhost
+postfix postfix/destinations    string  foobar.com, ubuntu, localhost.localdomain, localhost
 postfix postfix/retry_upgrade_warning   boolean 
 # Install postfix despite an unsupported kernel?
 postfix postfix/kernel_version_warning  boolean 
