--- a/server/database/postgresql.conf
+++ b/server/database/postgresql.conf
@@ -51,13 +51,13 @@
 
 data_directory = '/datastore/pgdb'		# use data in another directory
 					# (change requires restart)
-hba_file = '/etc/postgresql/8.4/fixjam/pg_hba.conf'	# host-based authentication file
+hba_file = '/etc/postgresql/8.4/foobar/pg_hba.conf'	# host-based authentication file
 					# (change requires restart)
-ident_file = '/etc/postgresql/8.4/fixjam/pg_ident.conf'	# ident configuration file
+ident_file = '/etc/postgresql/8.4/foobar/pg_ident.conf'	# ident configuration file
 					# (change requires restart)
 
 # If external_pid_file is not explicitly set, no extra PID file is written.
-external_pid_file = '/var/run/postgresql/8.4-fixjam.pid'		# write an extra PID file
+external_pid_file = '/var/run/postgresql/8.4-foobar.pid'		# write an extra PID file
 					# (change requires restart)
 
 
