--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,8 @@
-Django==1.2.3
-Fabric==0.9.2
-South==0.7.2
-django-picklefield==0.1.6
-django-registration==0.7
+Django
+Fabric
+South
+django-picklefield
+django-registration
 -e git+http://github.com/facebook/python-sdk.git#egg=facebook-python-sdk
-paramiko==1.7.6
-psycopg2==2.2.2
-pycrypto==2.0.1
-virtualenv==1.4.9
-wsgiref==0.1.2
+psycopg2
+virtualenv
