remove domain from postfile config

--- a/server/postfix_preseed.cfg
+++ b/server/postfix_preseed.cfg
@@ -5,11 +5,17 @@ postfix postfix/root_address    string
 postfix postfix/rfc1035_violation   boolean false
 postfix postfix/mydomain_warning    boolean 
 postfix postfix/mynetworks  string  127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
-postfix postfix/mailname    string  seddit.com
+
+# Is this ok to do?
+postfix postfix/mailname    string  localhost
+
 postfix postfix/tlsmgr_upgrade_warning  boolean 
 postfix postfix/recipient_delim string  +
 postfix postfix/main_mailer_type    select  Internet Site
-postfix postfix/destinations    string  foobar.com, ubuntu, localhost.localdomain, localhost
+
+# We don't really want to receive any mail
+postfix postfix/destinations    string  ubuntu, localhost.localdomain, localhost
+
 postfix postfix/retry_upgrade_warning   boolean 
 # Install postfix despite an unsupported kernel?
 postfix postfix/kernel_version_warning  boolean 
