fix postgresql.conf, we no longer use custom cluster location

--- a/server/database/postgresql.conf
+++ b/server/database/postgresql.conf
@@ -1,11 +1,3 @@
-# Changes from default:
-#   - ### set listen_addresses to '*'
-#   # ^ canceled, back to localhost for now
-# 
-# This file should be updated if 
-#   - the cluster name or location changes.
-#
-#
 #####################################
 #
 #
@@ -49,15 +41,15 @@
 # The default values of these variables are driven from the -D command-line
 # option or PGDATA environment variable, represented here as ConfigDir.
 
-data_directory = '/datastore/pgdb'		# use data in another directory
+data_directory = '/var/lib/postgresql/8.4/main'  # use data in another directory
 					# (change requires restart)
-hba_file = '/etc/postgresql/8.4/foobar/pg_hba.conf'	# host-based authentication file
+hba_file = '/etc/postgresql/8.4/main/pg_hba.conf'	# host-based authentication file
 					# (change requires restart)
-ident_file = '/etc/postgresql/8.4/foobar/pg_ident.conf'	# ident configuration file
+ident_file = '/etc/postgresql/8.4/main/pg_ident.conf'	# ident configuration file
 					# (change requires restart)
 
 # If external_pid_file is not explicitly set, no extra PID file is written.
-external_pid_file = '/var/run/postgresql/8.4-foobar.pid'		# write an extra PID file
+external_pid_file = '/var/run/postgresql/8.4-main.pid'		# write an extra PID file
 					# (change requires restart)
 
 
@@ -73,7 +65,7 @@ external_pid_file = '/var/run/postgresql/8.4-foobar.pid'		# write an extra PID f
 					# defaults to 'localhost', '*' = all
 					# (change requires restart)
 port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+max_connections = 50			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per 
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
