--- a/server/database/pg_hba.conf
+++ b/server/database/pg_hba.conf
@@ -59,10 +59,11 @@
 # or via the -i or -h command line switches.
 #
 
-host foobar foobar 10.0.0.0/8 md5
-host foobar foobar 192.168.58.1/24 md5
-local foobar foobar md5
-local test_foobar foobar md5
+# When you split off servers, might want these or similar:
+#host {{ PROJECT_NAME }} {{ PROJECT_NAME }} 10.0.0.0/8 md5
+#host {{ PROJECT_NAME }} {{ PROJECT_NAME }} 192.168.58.1/24 md5
+# Use 'trust' instead of 'md5' to skip passwords altogether
+local {{ PROJECT_NAME }} {{ PROJECT_NAME }} md5
 
 # DO NOT DISABLE!
 # If you change this first entry you will need to make sure that the
