multi-site support

--- a/server/database/pg_hba.conf
+++ b/server/database/pg_hba.conf
@@ -63,7 +63,8 @@
 #host {{ PROJECT_NAME }} {{ PROJECT_NAME }} 10.0.0.0/8 md5
 #host {{ PROJECT_NAME }} {{ PROJECT_NAME }} 192.168.58.1/24 md5
 # Use 'trust' instead of 'md5' to skip passwords altogether
-local {{ PROJECT_NAME }} {{ PROJECT_NAME }} md5
+local all all trust
+#local {{ PROJECT_NAME }} {{ PROJECT_NAME }} md5
 
 # DO NOT DISABLE!
 # If you change this first entry you will need to make sure that the
