make apache only listen on loopback

--- a/server/django/ports.conf
+++ b/server/django/ports.conf
@@ -6,7 +6,7 @@
 # README.Debian.gz
 
 NameVirtualHost *:{{ DJANGO_PORT }}
-Listen {{ DJANGO_PORT }}
+Listen 127.0.0.1:{{ DJANGO_PORT }}
 
 #<IfModule mod_ssl.c>
 #    # SSL name based virtual hosts are not yet supported, therefore no
