--- a/server/database/postgresql.conf
+++ b/server/database/postgresql.conf
@@ -41,15 +41,15 @@
 # The default values of these variables are driven from the -D command-line
 # option or PGDATA environment variable, represented here as ConfigDir.
 
-data_directory = '/var/lib/postgresql/8.4/main'  # use data in another directory
+data_directory = '/var/lib/postgresql/{{ PG_VERSION_STRING }}/main'  # use data in another directory
 					# (change requires restart)
-hba_file = '/etc/postgresql/8.4/main/pg_hba.conf'	# host-based authentication file
+hba_file = '/etc/postgresql/{{ PG_VERSION_STRING }}/main/pg_hba.conf'	# host-based authentication file
 					# (change requires restart)
-ident_file = '/etc/postgresql/8.4/main/pg_ident.conf'	# ident configuration file
+ident_file = '/etc/postgresql/{{ PG_VERSION_STRING }}/main/pg_ident.conf'	# ident configuration file
 					# (change requires restart)
 
 # If external_pid_file is not explicitly set, no extra PID file is written.
-external_pid_file = '/var/run/postgresql/8.4-main.pid'		# write an extra PID file
+external_pid_file = '/var/run/postgresql/{{ PG_VERSION_STRING }}-main.pid'		# write an extra PID file
 					# (change requires restart)
 
 
