--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,3 +5,4 @@ django-registration
 -e git+https://github.com/pythonforfacebook/facebook-sdk#egg=facebook-python-sdk
 psycopg2<=2.4.1
 virtualenv
+python-memcached
